# gqr-llm-benchmark

./: README.md  bench.py  pyproject.toml  willo.csv
notebooks/: 01_naive_bench.ipynb  01_run_benchmarks.ipynb  02_dspy_bench.ipynb  02_results.ipynb  03_gepa_bench.ipynb  04_fewshot_bench.ipynb  04_results.ipynb  05_results.ipynb  prompt.py  run_benchmarks.ipynb  util.py
results/: benchmark_results_20251213_174048.csv  benchmark_results_20251216_095243.csv  benchmark_results_20251217_160729.csv  benchmark_results_20251219_164828.csv  benchmark_results_20251219_191559.csv  dspy_results_20251222_135911.csv  dspy_results_20251222_215019.csv  fewshot_results_20251230_112547.csv  gepa_results_20251226_015214.csv  hf_baseline+dspy+gepa+fewshot_tok3-50_ctx2048_gepa5000-1000-light-s22_fs300-d6-c4_20260405_022634.csv  hf_baseline+dspy+gepa+fewshot_tok3-50_ctx2048_gepa5000-1000-light-s22_fs300-d6-c4_20260405_160124.csv  hf_baseline+gepa_tok3-15_ctx2048_gepa500-300-light-s22_fs300-d6-c4_20260412_232351.csv  hf_baseline+gepa_tok3-15_ctx2048_gepa500-300-light-s22_fs300-d6-c4_20260413_094705.csv  results.csv  results_1.csv
saves/: fewshot_Qwen_Qwen3.5-4B.json  fewshot_Qwen_Qwen3.5-9B.json  fewshot_google_gemma-4-E2B-it.json  fewshot_granite3.3_2b.json  fewshot_mistralai_Mistral-7B-Instruct-v0.3.json  fewshot_phi4_14b.json  fewshot_qwen3_14b.json  gepa_Qwen_Qwen3.5-4B.json  gepa_Qwen_Qwen3.5-9B.json  gepa_google_gemma-4-E4B-it.json  gepa_mistralai_Mistral-7B-Instruct-v0.3.json  granite3.3_2b.json
