[project]
name = "gqr-llm-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "dspy>=3.0.4",
    "gqr>=0.0.5",
    "huggingface-hub>=1.2.2",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
